k8s/fargate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fargate-app-service
  namespace: fargate
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
spec:
  selector:
    app: fargate-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
